# asset-server-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.alpine  Dockerfile.alpine-clang  Dockerfile.alpine-gcc  Dockerfile.debian  Dockerfile.debian-clang  Dockerfile.debian-gcc  Dockerfile.fedora-clang  Dockerfile.fedora-gcc  README.md  asset-server.cfg  create-dockerfiles.py  playground.cpp  sandbox.cpp  specifikace.md
deployment/: Caddyfile  config.cfg  docker-compose.yml
deployment/www/: index.html  script.js
example-deployment/: Caddyfile  docker-compose.yml
example-deployment/www/: script.js
scripts/: debian-build.sh  default_docker_config.cfg  docker-build-and-run.sh
src/: config.hpp  http_connection.hpp  image_processing.hpp  image_processing_old.hpp  main.cpp  main.hpp  server_state.hpp  string_utils.hpp  thread_pool.hpp  utils.hpp
src/storage/: fs.hpp  interface.hpp
test/: config1.cfg  docker_config.cfg  e2e_tests.sh  test.cpp  test.hpp
test/testdata/: image1_files.txt  image1_response.json  image1_response_existing.json  image1_shasums.txt
